# WikiBot

./: Article.py  README.md  main.py  plots.py  pyproject.toml  wikibot.py
