[tool.poetry]
name = "repl_python3_DiscordBotPy"
version = "0.1.0"
description = ""
authors = ["young king 7"]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.17.1"
discord = "^1.0.1"
datamart-isi = "^2.1.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
